2024-10-28T00:56:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11545378103 # 462
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-28
* notice: last 14d: unq all: 5 6
* notice: prev accum: outdated-unq outdated-all / unq all: 861 1336 / 867 1342
* notice: next accum: outdated-unq outdated-all / unq all: 862 1337 / 868 1343
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-10-13] / [2024-10-27]

2024-10-26T00:52:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11527467885 # 460
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-26
* notice: last 14d: unq all: 6 6
* notice: prev accum: outdated-unq outdated-all / unq all: 861 1336 / 866 1341
* notice: next accum: outdated-unq outdated-all / unq all: 861 1336 / 867 1342
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-25]

2024-10-22T00:54:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11451177265 # 456
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-22
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 861 1336 / 865 1340
* notice: next accum: outdated-unq outdated-all / unq all: 861 1336 / 866 1341
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-21]

2024-10-21T00:55:27Z: