@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-28T00:56:07Z",
-  "count_outdated" : 1337,
-  "uniques_outdated" : 862,
+  "timestamp" : "2024-10-29T00:55:02Z",
+  "count_outdated" : 1338,
+  "uniques_outdated" : 863,
   "count" : 1343,
   "uniques" : 868,
   "clones" : [
-    {
-      "timestamp": "2024-10-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-20T00:00:00Z",
       "count": 2,
