@@ -1,3 +1,12 @@
+2024-10-29T00:55:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11565241275 # 463
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-29
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 862 1337 / 868 1343
+* notice: next accum: outdated-unq outdated-all / unq all: 863 1338 / 868 1343
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-10-14] / []
+
 2024-10-28T00:56:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11545378103 # 462
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-28
